# Flask-REST-API

new_project/: app.py  pyproject.toml
