[tool.poetry]
name = "rest"
version = "0.1.0"
description = ""
authors = ["Dipti8302 <dipti.dokhe02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-restx = "^0.5.1"
pyrsistent = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
